adding button click + change state

--- a/hello.html
+++ b/hello.html
@@ -36,10 +36,12 @@
   </style>
 </head>
 <body>
-  <img src="cute.gif" alt="Cute GIF" />
+  <img id="panic-img" src="cute.gif" alt="Cute GIF" />
   <label class="checkmark">
     <input type="checkbox" id="panic-done" style="accent-color: #4caf50; width: 20px; height: 20px; margin-right: 8px;" />
     panic done?
   </label>
+  <audio id="panic-sound" src="sound.mp3" preload="auto"></audio>
+  <script src="popup.js"></script>
 </body>
 </html>
